2005-06-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* newweb.css: add p.boxout{left,right}

	* nl/switch/advantages.html: "Geen gepriegel" rewrite, based on en
	original rewrite.  

	* site/images/lilypond-book-small.png (Module): smaller image for
	better paragraph flow.

	* site/switch/testimonials.html: floating images for darius,
	carter and orm.

	* site/switch/advantages.html: use computer!totaal quote; we do
	have docs of that.
 
	* newweb.css (a): darker links.

	* site/about/screenshots.html: remove file.

	* site/about/faq.html (href): small updates.

	* site/about/features.html: edit.

2005-06-22  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* fr/about/features: update
	
	* fr/install/index.html: new file

2005-06-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* fr/about/features.html: new file. (Gauvain Pocentek).

	* fr/about/thanks.html: new file. (Gauvain Pocentek)

2005-06-19  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* site/fr/index.html: Updates.

2005-06-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/menu-entries.py: remove .html from index

	* site/install/devel.ihtml: update macos.

2005-06-17  John Mandereau  <john.mandereau@free.fr>

	* fr/: update translations.

2005-06-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/images/baer-flat-gray.png (Module): gray scale scans.

	* site/images/directions-updown.png (Module): update.

	* site/images/directions-page1.png (Module): remove.

	* site/images/directions.ly: update to 2.5.25

	* site/switch/index.html: use double lily image.

	* fr/switch/howto.html: remove @LANG@

	* site/switch/advantages.html: add screenshot of Mac version.

	* site/images/screenshot-macos.png (Module): new image.

	* site/images/double-lily.png (Module): new image.

	* site/about/thanks.html (href): add Krista Scott

	* site/images/macosx-logo.png (Module): use MacOS logo from
	apple.com

	* site/install/index.html (href): remove mandrake 9 note.
	(href): acknowledge trademarks.
