@@ -10,27 +10,26 @@
 <h1>Why switch to LilyPond?</h1>
 
 
-<p class="sidebar" align="right" style="max-width:50%;">
+<p class="boxoutleft boxout" align="right" style="max-width:50%;">
 <font size="+1">
   &ldquo;...&nbsp;music produced by LilyPond is exceptionally pretty&nbsp;...&rdquo; -
   <a href="http://www.computertotaal.nl">Computer!Totaal</a>.
   </font>
 </p>
 
+<a href="@IMAGES@lilypond-book.png">
+<img style="float: right;" src="@IMAGES@lilypond-book-small.png" align="right" alt="lilypond-book">
+</a>
 
 <dl>
   <dt>Text-based input</dt>
   <dd>
 
-<a href="@IMAGES@lilypond-book.png">
-<img src="@IMAGES@lilypond-book-small.png" align="right" alt="lilypond-book">
-</a>
-  
     LilyPond takes ASCII input, which you can produce in <em>your</em>
     favorite environment, quickly and comfortably.  No more futzing with
     the mouse.  The input contains all the information, so there is no
     need to remember complex command sequences.  Simply save an input for
-    later reference.
+    later reference.</p>
   </dd>
 
   <dt>Mix music and text</dt> <dd>
