@@ -20,14 +20,11 @@
     --John Keats</em>
 </p>
 <p>
-  Scores made with computers almost always look bland and uninspiring,
-  but for what reason?  Machines may be mechanical, but why should their
-  products be?  With that thought in mind we started programming nine
-  years ago.  We have tried to capture the rules of good music engraving
-  in a program, and that program is called <em>LilyPond</em>.  We built
-  it like we expect software to be: robust, open and flexible.  The best
-  is that you can create beautiful sheet music comfortably with
-  LilyPond.
+  Why can't computer printout look just as good as traditionally
+  engraved music?  With that thought in mind we have started
+  <em>LilyPond</em> nine years ago.  We built it to be robust,
+  flexible, and, of course, easily usable. Use it for your music as
+  well!
 </p>
 <p>
   Have fun!
