@@ -1,3 +1,7 @@
+2005-06-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* site/switch/index.html: rewrite intro paragraph.
+
 2005-06-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* newweb.css: add p.boxout{left,right}
